--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,11 +1,1 @@
-*
-!/.gitignore
-!/postgres
-!/simple-dir
-!/run-tests.sh
-!/bench*.sh
-!/bench-*.py
-!/push-*.sh
-!/scp*.sh
-!version.sh
-/server
+/benchmark_*
