--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -122,7 +122,7 @@ jobs:
       - name: launch lxc container
         run: ./tests/launch_test_lxc.sh test-export
       - name: run benchmark (${{ matrix.script }})
-        run: sudo lxc exec test -- sudo --login --user ubuntu /bin/bash -c "sleep 3 && sudo /home/ubuntu/d4c/tests/bench_single.sh benchmark benchmark/images ${{ matrix.script }} ${{ matrix.thread }} ${{ matrix.sched }} ${{ matrix.comp }}"
+        run: sudo lxc exec test -- sudo --login --user ubuntu /bin/bash -c "sleep 3 && RUNNER=GHA sudo -E /home/ubuntu/d4c/tests/bench_single.sh benchmark benchmark/images ${{ matrix.script }} ${{ matrix.thread }} ${{ matrix.sched }} ${{ matrix.comp }}"
 
   benchmark-cdimg:
     runs-on: ubuntu-22.04
@@ -328,7 +328,7 @@ jobs:
       - name: run test
         run: sudo lxc exec test -- sudo --login --user ubuntu /bin/bash -c "sleep 3 && sudo /home/ubuntu/d4c/tests/test_bsdiffx.sh"
       - name: run benchmark
-        run: sudo lxc exec test -- sudo --login --user ubuntu /bin/bash -c "sleep 3 && sudo /home/ubuntu/d4c/tests/bench.sh"
+        run: sudo lxc exec test -- sudo --login --user ubuntu /bin/bash -c "sleep 3 && RUNNER=GHA sudo -E /home/ubuntu/d4c/tests/bench.sh"
       - name: get result
         id: get_result
         run: |
@@ -341,6 +341,8 @@ jobs:
           sudo lxc file pull test/tmp/benchmark/patch.png /tmp/benchmark-results/.
           sudo lxc file pull test/tmp/benchmark/file_diff.png /tmp/benchmark-results/.
           sudo lxc file pull test/tmp/benchmark/file_compare.png /tmp/benchmark-results/.
+          sudo lxc file pull test/tmp/benchmark/file_io.png /tmp/benchmark-results/.
+          sudo lxc file pull test/tmp/benchmark/file_io_with_type.png /tmp/benchmark-results/.
       - uses: actions/upload-artifact@v4
         if: steps.get_result.conclusion == 'success'
         with:
